[package]
name = "kvs"
version = "0.1.0"
authors = ["Gregory Berns-Leone <gberns.l@gmail.com>"]
description = "A key value store"
edition = "2018"


[dependencies]
clap = "2.33.0"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.94"
bson = "0.13.0"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
